Fix Vercel routing and file serving

--- a/vercel.json
+++ b/vercel.json
@@ -4,24 +4,44 @@
         {
             "src": "server.js",
             "use": "@vercel/node"
-        },
-        {
-            "src": "client/**/*",
-            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "server.js"
+            "dest": "/server.js"
         },
         {
             "src": "/uploads/(.*)",
-            "dest": "server.js"
+            "dest": "/server.js"
+        },
+        {
+            "src": "/login",
+            "dest": "/server.js"
+        },
+        {
+            "src": "/register",
+            "dest": "/server.js"
+        },
+        {
+            "src": "/profile",
+            "dest": "/server.js"
+        },
+        {
+            "src": "/upload",
+            "dest": "/server.js"
+        },
+        {
+            "src": "/css/(.*)",
+            "dest": "/client/css/$1"
+        },
+        {
+            "src": "/js/(.*)",
+            "dest": "/client/js/$1"
         },
         {
             "src": "/(.*)",
-            "dest": "client/$1"
+            "dest": "/server.js"
         }
     ]
 }
