--- a/vercel.json
+++ b/vercel.json
@@ -2,37 +2,57 @@
     "version": 2,
     "builds": [
         {
-            "src": "server.js",
-            "use": "@vercel/node"
-        },
-        {
             "src": "client/**",
             "use": "@vercel/static"
+        },
+        {
+            "src": "server.js",
+            "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "server.js"
+            "dest": "/server.js"
         },
         {
             "src": "/uploads/(.*)",
-            "dest": "server.js"
+            "dest": "/server.js"
+        },
+        {
+            "src": "/login",
+            "dest": "/server.js"
+        },
+        {
+            "src": "/register",
+            "dest": "/server.js"
+        },
+        {
+            "src": "/profile",
+            "dest": "/server.js"
+        },
+        {
+            "src": "/upload",
+            "dest": "/server.js"
         },
         {
             "src": "/css/(.*)",
-            "dest": "/client/css/$1"
+            "dest": "/client/css/$1",
+            "headers": { "cache-control": "public, max-age=31536000, immutable" }
         },
         {
             "src": "/js/(.*)",
-            "dest": "/client/js/$1"
+            "dest": "/client/js/$1",
+            "headers": { "cache-control": "public, max-age=31536000, immutable" }
         },
         {
-            "handle": "filesystem"
+            "src": "/(.*)\\.(?:css|js|json|map)$",
+            "dest": "/client/$1.$2",
+            "headers": { "cache-control": "public, max-age=31536000, immutable" }
         },
         {
             "src": "/(.*)",
-            "dest": "server.js"
+            "dest": "/server.js"
         }
     ]
 }
